--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Play Music</title>
+</head>
+<body style="text-align:center; margin-top: 100px;">
+  <h1>Click the Button to Play Music 🎵</h1>
+  <audio id="music" src="music.mp3"></audio>
+  <button onclick="document.getElementById('music').play()" style="font-size: 20px; padding: 10px 20px;">Play Music</button>
+</body>
+</html>
